# django-seed

./: pyproject.toml  requirements.txt
django_seed/: guessers.py
