[tool.poetry]
name = "django-seed"
version = "0.1.0"
description = ""
authors = ["Juan Olvera <juan@jolvera.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
Faker = "^8.0.0"
toposort = "^1.6"
django-hashids = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
